Fix button alignment and var name

--- a/packages/button/src/_button.scss
+++ b/packages/button/src/_button.scss
@@ -26,7 +26,7 @@ $_b: var.$prefix-block;
   font-family: inherit;
   font-size: var(--#{$_v}button-font-size);
   font-weight: var(--#{$_v}button-font-weight);
-  line-height: var(--#{$_v}button-font-height);
+  line-height: var(--#{$_v}button-line-height);
   text-decoration: none;
   white-space: nowrap;
   cursor: pointer;
