--- a/packages/button/src/_variables.scss
+++ b/packages/button/src/_variables.scss
@@ -17,7 +17,7 @@ $border-width: 1px !default;
 $border-radius: core.$border-radius !default;
 $font-size: 1em !default;
 $font-weight: inherit !default;
-$line-height: core.$line-height !default;
+$line-height: 1.6 !default;
 
 // Transition properties
 $transition-property: background, color, border-color, box-shadow !default;
